[gd_scene load_steps=38 format=3 uid="uid://yw7vd1w222jo"]

[ext_resource type="Script" path="res://script/main.gd" id="1_qhviq"]
[ext_resource type="Texture2D" uid="uid://bd7mkuuguoip7" path="res://Texture/main-menu/game_bg1.jpg" id="2_rwayh"]
[ext_resource type="Texture2D" uid="uid://bbehrvboh4xs1" path="res://Texture/main-menu/game_bg3.png" id="4_n2ote"]
[ext_resource type="Texture2D" uid="uid://bxf2c6ehqn45d" path="res://Texture/main-menu/setting.png" id="4_tr2ql"]
[ext_resource type="Texture2D" uid="uid://c2etg6rom0f7k" path="res://Texture/main-menu/game_bg2.png" id="4_vqg2r"]
[ext_resource type="Texture2D" uid="uid://dnjjq283kairk" path="res://Texture/main-menu/game_bg4.png" id="5_fuk0a"]
[ext_resource type="Texture2D" uid="uid://wbdvfc22ymew" path="res://Texture/main-menu/close.png" id="5_hligs"]
[ext_resource type="Texture2D" uid="uid://becb0xo71d5i7" path="res://Texture/main-menu/quit2.png" id="5_lkxhv"]
[ext_resource type="Texture2D" uid="uid://p1km7mpypa1h" path="res://Texture/main-menu/game_bg5.png" id="6_reqyy"]
[ext_resource type="Texture2D" uid="uid://bbwfcth4irx5t" path="res://Texture/main-menu/host.png" id="7_dccr0"]
[ext_resource type="Texture2D" uid="uid://d31x4pmnabonh" path="res://Texture/main-menu/game_bg6.png" id="7_exhgg"]
[ext_resource type="Texture2D" uid="uid://do4f85lvwkemr" path="res://Texture/main-menu/join.png" id="8_cguso"]
[ext_resource type="Script" path="res://script/multiplayer/PlayMenu.gd" id="8_n7ply"]
[ext_resource type="Script" path="res://script/multiplayer/JoinMenu.gd" id="9_8hr6b"]
[ext_resource type="FontFile" uid="uid://b1m2j2q6ex2ie" path="res://resources/UbuntuMono-R.ttf" id="10_vj0vi"]
[ext_resource type="Script" path="res://script/setting_menu.gd" id="12_h5828"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lolhe"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.0431373, 0.0431373, 0.0431373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2q8ll"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.184314, 0.184314, 0.184314, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gmg10"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Animation" id="Animation_rugrx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayMenu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Setting:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("JoinMenu:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qlkqq"]
resource_name = "joinmenu"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JoinMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_r5n5f"]
resource_name = "playmenu"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_awn76"]
resource_name = "setting"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Setting:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hw1dl"]
resource_name = "when-ready"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8e4hg"]
_data = {
"RESET": SubResource("Animation_rugrx"),
"joinmenu": SubResource("Animation_qlkqq"),
"playmenu": SubResource("Animation_r5n5f"),
"setting": SubResource("Animation_awn76"),
"when-ready": SubResource("Animation_hw1dl")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lnf2n"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stuqu"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.141176, 0.356863, 0.113725, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xk83h"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.180392, 0.443137, 0.14902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o82vv"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.145098, 0.364706, 0.117647, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c1npj"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.180392, 0.443137, 0.14902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3prba"]
content_margin_left = 30.0
content_margin_top = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jb5qt"]
content_margin_left = 10.0
content_margin_top = 15.0
content_margin_right = 10.0
content_margin_bottom = 15.0
bg_color = Color(0.164706, 0.164706, 0.164706, 1)
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eow3i"]
content_margin_left = 10.0
content_margin_top = 15.0
content_margin_right = 10.0
content_margin_bottom = 15.0
bg_color = Color(0.245984, 0.245984, 0.245984, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8n81k"]
content_margin_left = 10.0
content_margin_top = 15.0
content_margin_right = 10.0
content_margin_bottom = 15.0
bg_color = Color(0.245984, 0.245984, 0.245984, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ktdfg"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gv6im"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jfc8c"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.164706, 0.164706, 0.164706, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qhviq")
texture_arr = Array[Texture]([ExtResource("2_rwayh"), ExtResource("4_vqg2r"), ExtResource("4_n2ote"), ExtResource("5_fuk0a"), ExtResource("6_reqyy"), ExtResource("7_exhgg")])
metadata/_edit_use_anchors_ = true

[node name="bg_texture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="VBoxC" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.103733
anchor_top = 0.0925926
anchor_right = 0.896267
anchor_bottom = 0.907407
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxC"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxC/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_lolhe")
text = "Kuarkers"

[node name="Hbox" type="HBoxContainer" parent="VBoxC"]
layout_mode = 2
size_flags_vertical = 10

[node name="Quit" type="Button" parent="VBoxC/Hbox"]
custom_minimum_size = Vector2(108, 108)
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme_override_font_sizes/font_size = 45
icon = ExtResource("5_lkxhv")
icon_alignment = 1
expand_icon = true

[node name="Setting" type="Button" parent="VBoxC/Hbox"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
icon = ExtResource("4_tr2ql")

[node name="Host" type="Button" parent="VBoxC/Hbox"]
custom_minimum_size = Vector2(108, 108)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme_override_font_sizes/font_size = 45
action_mode = 0
icon = ExtResource("7_dccr0")
icon_alignment = 1
expand_icon = true

[node name="Join" type="Button" parent="VBoxC/Hbox"]
custom_minimum_size = Vector2(108, 0)
layout_mode = 2
focus_mode = 0
icon = ExtResource("8_cguso")
icon_alignment = 1
expand_icon = true

[node name="Info" type="Button" parent="VBoxC/Hbox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
focus_mode = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2q8ll")
theme_override_styles/hover = SubResource("StyleBoxFlat_2q8ll")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gmg10")
text = "Info"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8e4hg")
}

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="JoinMenu" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.239583
anchor_top = 0.307099
anchor_right = 0.760417
anchor_bottom = 0.692901
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lnf2n")
script = ExtResource("9_8hr6b")
metadata/_edit_use_anchors_ = true

[node name="Hbox2" type="HBoxContainer" parent="JoinMenu"]
layout_mode = 2
anchor_left = 0.05
anchor_top = 0.636
anchor_right = 0.95
anchor_bottom = 0.8
size_flags_vertical = 10
theme_override_constants/separation = 20
metadata/_edit_use_anchors_ = true

[node name="LineEdit" type="LineEdit" parent="JoinMenu/Hbox2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 20
placeholder_text = "Alamat IP"

[node name="LineEdit2" type="LineEdit" parent="JoinMenu/Hbox2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 20
placeholder_text = "Port"

[node name="Join" type="Button" parent="JoinMenu/Hbox2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_stuqu")
theme_override_styles/hover = SubResource("StyleBoxFlat_stuqu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_stuqu")
text = "Gabung"

[node name="Label" type="Label" parent="JoinMenu"]
layout_mode = 2
anchor_left = 0.05
anchor_top = 0.08
anchor_right = 0.95
anchor_bottom = 0.204
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 30
text = "Gabung Permainan"
metadata/_edit_use_anchors_ = true

[node name="Close2" type="TextureButton" parent="JoinMenu"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.916667
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("5_hligs")
ignore_texture_size = true
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="PlayMenu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.108507
anchor_top = 0.1875
anchor_right = 0.891493
anchor_bottom = 0.8125
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lnf2n")
script = ExtResource("8_n7ply")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PlayMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 76
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 30

[node name="HostMenu" type="VBoxContainer" parent="PlayMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
metadata/_edit_use_anchors_ = true

[node name="Hbox" type="HBoxContainer" parent="PlayMenu/MarginContainer/HostMenu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Quit" type="Button" parent="PlayMenu/MarginContainer/HostMenu/Hbox" groups=["wait_ui"]]
visible = false
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_xk83h")
text = "Keluar"

[node name="MarginContainer" type="MarginContainer" parent="PlayMenu/MarginContainer/HostMenu/Hbox" groups=["wait_ui"]]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 30

[node name="Label" type="Label" parent="PlayMenu/MarginContainer/HostMenu/Hbox" groups=["wait_ui"]]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 24

[node name="Buat" type="Button" parent="PlayMenu/MarginContainer/HostMenu/Hbox" groups=["host_ui"]]
layout_mode = 2
size_flags_horizontal = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_stuqu")
theme_override_styles/hover = SubResource("StyleBoxFlat_stuqu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o82vv")
text = "Buat"

[node name="Start" type="Button" parent="PlayMenu/MarginContainer/HostMenu/Hbox"]
visible = false
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_c1npj")
text = "Mulai"

[node name="Label" type="Label" parent="PlayMenu/MarginContainer/HostMenu" groups=["wait_ui"]]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 18

[node name="Label2" type="Label" parent="PlayMenu/MarginContainer/HostMenu" groups=["wait_ui"]]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 18

[node name="Close" type="TextureButton" parent="PlayMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.95509
anchor_right = 1.0
anchor_bottom = 0.0857143
grow_horizontal = 0
texture_normal = ExtResource("5_hligs")
ignore_texture_size = true
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="PlayMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_3prba")
text = "Buat Permainan"

[node name="Setting" type="TabContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -454.0
offset_top = -274.0
offset_right = 454.0
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/side_margin = 0
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 24
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_jb5qt")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_eow3i")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_8n81k")
theme_override_styles/panel = SubResource("StyleBoxFlat_ktdfg")
theme_override_styles/tabbar_background = SubResource("StyleBoxFlat_gv6im")
tab_focus_mode = 0
script = ExtResource("12_h5828")

[node name="Umum" type="VBoxContainer" parent="Setting"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Hbox" type="HBoxContainer" parent="Setting/Umum"]
custom_minimum_size = Vector2(708, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Setting/Umum/Hbox"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 24
text = "Nama Pemain : "

[node name="LineEdit" type="LineEdit" parent="Setting/Umum/Hbox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_jfc8c")
text = "El-Heker"
placeholder_text = ". . ."

[node name="Hbox2" type="HBoxContainer" parent="Setting/Umum"]
custom_minimum_size = Vector2(708, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Setting/Umum/Hbox2"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 24
text = "Sensitivitas : "

[node name="Hslider" type="HSlider" parent="Setting/Umum/Hbox2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
value = 1.0

[node name="Hbox3" type="HBoxContainer" parent="Setting/Umum"]
visible = false
custom_minimum_size = Vector2(708, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Setting/Umum/Hbox3"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 24
text = "Skala Joystik : "

[node name="Hslider" type="HSlider" parent="Setting/Umum/Hbox3"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.2
max_value = 2.0
step = 0.2
value = 1.0

[node name="Button" type="Button" parent="Setting/Umum"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 24
text = "Kembali"

[node name="Grafik" type="VBoxContainer" parent="Setting"]
visible = false
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Hbox3" type="HBoxContainer" parent="Setting/Grafik"]
custom_minimum_size = Vector2(708, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Setting/Grafik/Hbox3"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Jarak pandangan kamera, semakin kecil performa semakin baik"
mouse_filter = 0
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 24
text = "Jarak Render : "

[node name="Hslider" type="HSlider" parent="Setting/Grafik/Hbox3"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 50.0
value = 40.0

[node name="Hbox4" type="HBoxContainer" parent="Setting/Grafik"]
custom_minimum_size = Vector2(708, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Setting/Grafik/Hbox4"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Skala Resolusi,
semakin besar,  tampilan(3D) semakin bagus
 tapi performa menurun"
mouse_filter = 1
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 24
text = "Skala Resolusi : "

[node name="Hslider" type="HSlider" parent="Setting/Grafik/Hbox4"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.25
max_value = 2.0
step = 0.25
value = 1.0

[node name="Hbox5" type="HBoxContainer" parent="Setting/Grafik"]
custom_minimum_size = Vector2(708, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="Label4" type="Label" parent="Setting/Grafik/Hbox5"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 24
text = "Bayangan : "

[node name="CheckButton" type="Button" parent="Setting/Grafik/Hbox5"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 2
toggle_mode = true
text = "Nyala"

[node name="Button2" type="Button" parent="Setting/Grafik"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("10_vj0vi")
theme_override_font_sizes/font_size = 24
text = "Kembali"

[node name="InfoMenu" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(500, 300)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -226.0
offset_top = 70.0
offset_right = 274.0
offset_bottom = 370.0
grow_horizontal = 2
color = Color(0.16446, 0.16446, 0.16446, 1)

[node name="MarginContainer" type="MarginContainer" parent="InfoMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="InfoMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Control" type="Control" parent="InfoMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="InfoMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Versi : 1.2.0"

[node name="Label2" type="Label" parent="InfoMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Developer : Naf'an Rizkilah"

[node name="Label3" type="Label" parent="InfoMenu/MarginContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0.568627)
layout_mode = 2
size_flags_vertical = 6
text = "(klik dimana saja untuk menutup)"

[node name="Label3" type="Label" parent="InfoMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
text = "Dibuat di Godot"

[node name="LinkButton" type="LinkButton" parent="InfoMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Github"
uri = "https://github.com/Riizlaah"

[connection signal="pressed" from="VBoxC/Hbox/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxC/Hbox/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="VBoxC/Hbox/Host" to="." method="_on_main_pressed"]
[connection signal="pressed" from="VBoxC/Hbox/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxC/Hbox/Info" to="." method="_on_info_pressed"]
[connection signal="gui_input" from="Panel" to="." method="_on_gui_input"]
[connection signal="pressed" from="JoinMenu/Hbox2/Join" to="JoinMenu" method="_on_join_pressed"]
[connection signal="pressed" from="JoinMenu/Hbox2/Join" to="PlayMenu" method="_on_join_pressed"]
[connection signal="pressed" from="JoinMenu/Close2" to="." method="_on_close2_pressed"]
[connection signal="pressed" from="PlayMenu/MarginContainer/HostMenu/Hbox/Quit" to="PlayMenu" method="_on_quit_pressed"]
[connection signal="pressed" from="PlayMenu/MarginContainer/HostMenu/Hbox/Buat" to="PlayMenu" method="_on_buat_pressed"]
[connection signal="pressed" from="PlayMenu/MarginContainer/HostMenu/Hbox/Start" to="PlayMenu" method="_on_start_pressed"]
[connection signal="pressed" from="PlayMenu/Close" to="." method="_on_close1_pressed"]
[connection signal="text_changed" from="Setting/Umum/Hbox/LineEdit" to="Setting" method="_on_pn_edit_text_changed"]
[connection signal="value_changed" from="Setting/Umum/Hbox2/Hslider" to="Setting" method="_on_senv_changed"]
[connection signal="value_changed" from="Setting/Umum/Hbox3/Hslider" to="Setting" method="_on_sc_joystick_changed"]
[connection signal="pressed" from="Setting/Umum/Button" to="Setting" method="_on_close_pressed"]
[connection signal="value_changed" from="Setting/Grafik/Hbox3/Hslider" to="Setting" method="_on_r_dist_changed"]
[connection signal="value_changed" from="Setting/Grafik/Hbox4/Hslider" to="Setting" method="_on_scale_3d_changed"]
[connection signal="toggled" from="Setting/Grafik/Hbox5/CheckButton" to="Setting" method="_on_check_button_toggled"]
[connection signal="pressed" from="Setting/Grafik/Button2" to="Setting" method="_on_close_pressed"]
